--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
             navigator.getMedia({video: true},
                 (stream)=>{
                     console.log(stream);
-                    preview.src = stream.url;
+                    preview.srcObject = stream;
                 },
                 (error) => console.error(error));
  
