--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
                        navigator.msGetUserMedia);
 
             document.onload = () =>{
-                if (navigator.mediaDevices.getUserMedia) {
-                    navigator.mediaDevices.getUserMedia({ video: true })
+                if (navigator.getMedia) {
+                    navigator.getMedia.getUserMedia({ video: true })
                         .then(function (stream) {
                             preview.srcObject = stream;
                         })
