--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             const preview = document.getElementById("preview");
             const canvas = document.getElementById("canvas");
             let webcam = null; 
-            
+
             window.onload = () =>{
                 webcam = new Webcam(preview, 'user', canvas, null);
                 webcam.start();
@@ -25,6 +25,8 @@
                 var xhttp = new XMLHttpRequest();
                 xhttp.onreadystatechange = function() {
                     if (this.readyState == 4 && this.status == 200) {
+                        var audio = new Audio(`audios/${xhttp.responseText}.ogg`);
+                        audio.play();
                         console.log(xhttp.responseText);
                     }
                 };
