--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,13 @@
 <html>
     <head>
         <title>Vivian</title>
+        <style>
+            video{
+                transform: rotateY(180deg);
+                -webkit-transform:rotateY(180deg); /* Safari and Chrome */
+                -moz-transform:rotateY(180deg); /* Firefox */
+            }
+        </style>
     </head>
     <body>
         <video autoplay id="preview" width="640" height="480"></video>
