--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,6 @@
 <html>
     <head>
         <title>Vivian</title>
-        <style>
-            video{
-                transform: rotateY(180deg);
-                -webkit-transform:rotateY(180deg); /* Safari and Chrome */
-                -moz-transform:rotateY(180deg); /* Firefox */
-            }
-        </style>
     </head>
     <body>
         <video autoplay id="preview" width="640" height="480"></video>
@@ -24,6 +17,9 @@
             window.onload = () =>{
                 webcam = new Webcam(preview, 'user', canvas, null);
                 webcam.start();
+                setTimeout(() => {
+                    preview.style.transform = "scale(1,1)";
+                }, 100);
             }
  
             function tirarFoto(){
