--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
         <canvas id="canvas" style="display: none;"></canvas>
         <br/>
         <button onclick="tirarFoto()" style="width: 100%; height: 200px; border: 1px solid white; background-color: #232323; color: white">Tirar</button>
+        <script src="webcam.js"></script>
         <script>
             const preview = document.getElementById("preview");
             const canvas = document.getElementById("canvas");
